tests/e2e/errors/compile_syntax.lox
var x = ; // expect compile error: Expected expression
